fix chrome scrollbar

--- a/styles/index.css
+++ b/styles/index.css
@@ -106,3 +106,18 @@ footer > * {
 details summary:hover {
     cursor: pointer;
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+}
+
+::-webkit-scrollbar-track {
+    background-color: transparent;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    width: 2px;
+    background-color: #323140;
+}
